--- a/index.html
+++ b/index.html
@@ -4,9 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lektion 1</title>
+    <title>Lektion 2</title>
 </head>
 <body>
-    <h1>Frontend programmering 2022</h1>
+    
+    <script>
+        console.log("Hello from script tag")
+    </script>
+
+    <h1>Lektion 2</h1>
+
+    <button onclick="buttonHandler();">Button 1</button>
+    <button onclick="secondButton();">Button 2</button>
+    <br>
+    <input id="namn"> <button onclick="thirdButton();">Button 3</button>
+    
+    <div id="hello-output"></div>
+
+    <script src="script.js"></script>
+
+    <script>
+        let minuter = Number(prompt("Hur många minuter har du motionerat idag?"))
+        console.log(minuter + " minuter")
+        pTrainer();
+    </script>
 </body>
 </html>
