--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <p id="out"></p>
 
     <script>
+
         const minTime = 20;
         const maxTime = 180;
 
@@ -50,9 +51,20 @@
                 outputText= `Försök träna mindre än ${maxTime} minuter`
             }
             document.querySelector('#out').innerText = outputText;
-            
         }
     </script>
+    <script>
+        for (let i = 0; i<10; i++)
+        {
+            console.log(i)
+        }
+        myArr = [1,3,5,7,9];
+        for (let i = 0; i<10; i++)
+        {
+            console.log(`${i}: ${myArr[i]}`);
+        }
+    </script>
+
 
 </body>
 </html>
